<resources>
    <string name="app_name">Cool Weather App</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="sea_level_pressure_label">Sea Level Pressure</string>
    <string name="wind_direction_label">Wind Direction</string>
    <string name="wind_speed_label">Wind Speed</string>
    <string name="temperature_label">Temperature</string>
    <string name="time_label">Time</string>
    <string name="weather_image">Image representing the weather</string>
</resources>