<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="167dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/weather_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/clear_day" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/latitudeInput"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="26dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/longitudeInput"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeInput" />

    <TextView
        android:id="@+id/latitudeLabel"
        android:layout_width="91dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="208dp"
        android:background="#99C8ED"
        android:text="@string/latitude_label"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/longitudeLabel"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#99C8ED"
        android:text="@string/longitude_label"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeLabel" />

    <TextView
        android:id="@+id/seaLevelPressureLabel"
        android:layout_width="161dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#99C8ED"
        android:text="@string/sea_level_pressure_label"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeLabel" />

    <TextView
        android:id="@+id/windDirectionLabel"
        android:layout_width="136dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#99C8ED"
        android:text="@string/wind_direction_label"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seaLevelPressureLabel" />

    <TextView
        android:id="@+id/slpText"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:text="SLP"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeInput" />

    <TextView
        android:id="@+id/wdText"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:text="WD"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slpText" />

    <TextView
        android:id="@+id/windSpeedLabel"
        android:layout_width="112dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#99C8ED"
        android:text="@string/wind_speed_label"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windDirectionLabel" />

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#99C8ED"
        android:text="@string/temperature_label"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windSpeedLabel" />

    <TextView
        android:id="@+id/wsText"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:text="WS"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wdText" />

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:text="Temperature"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wsText" />

    <TextView
        android:id="@+id/texttimeLabelView5"
        android:layout_width="55dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#99C8ED"
        android:text="@string/time_label"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureLabel" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Time"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureText" />

</androidx.constraintlayout.widget.ConstraintLayout>